--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,8 @@ deps =
     pytest-cov
     -rrequirements.txt
     -rrequirements-dev.txt
-whitelist_externals = /bin/bash
+whitelist_externals = /usr/bin/bash
 commands =
 	pytest -W ignore::UserWarning --cov-report html:docs/source/_static/report/coverage/ --cov=./providence ./tests --junitxml=docs/source/_static/report/pytest-report.xml --cov-report xml:docs/source/_static/report/coverage/coverage.xml  --html=docs/source/_static/report/toxtestenv/coverage_and_docs-report.html  --durations=10 -m "not requires_data"
-
+    bash -ec 'cd docs && make clean'
+    bash -ec 'cd docs && make html'
